--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,6 @@ jobs:
         run: pnpm install
 
       - name: Run nx deploy for server-rewards
-        run: nx deploy server-rewards
+        run: pnpm nx deploy server-rewards
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
