--- a/apps/server-rewards/package.json
+++ b/apps/server-rewards/package.json
@@ -3,13 +3,21 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "hono": "^4.6.20"
+    "@libsql/client": "^0.14.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
+    "hono": "^4.6.20",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
+    "drizzle-kit": "^0.30.4",
     "wrangler": "^3.108.1"
   }
 }
