--- a/apps/web-rewards/package.json
+++ b/apps/web-rewards/package.json
@@ -13,7 +13,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "tsc -b && vite build && vite preview"
   },
   "dependencies": {
     "@embeeorg/ui-kit": "workspace:*",
