--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,20 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-
-      - name: Install wrangler
-        run: npm install -g wrangler
-
-      - name: Set Supabase Secrets in Cloudflare Workers
-        run: |
-          echo "${{ secrets.SUPABASE_URL }}" | npx wrangler secret put SUPABASE_URL --env production
-          echo "${{ secrets.SUPABASE_KEY }}" | npx wrangler secret put SUPABASE_KEY --env production
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+      - name: Create wrangler.toml for production
+        run: |
+          cat <<EOF > apps/server-rewards/wrangler.toml
+          name = "server-rewards"
+          main = "src/index.ts"
+          compatibility_date = "2025-02-12"
+
+          [vars]
+          SUPABASE_URL = "${{ secrets.SUPABASE_URL }}"
+          SUPABASE_KEY = "${{ secrets.SUPABASE_KEY }}"
+          EOF
 
       - name: Run nx deploy for server-rewards
         run: pnpm nx deploy server-rewards
