--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
           compatibility_date = "2025-02-12"
 
           [vars]
-          SUPABASE_URL = "${{ secrets.SUPABASE_URL }}"
-          SUPABASE_KEY = "${{ secrets.SUPABASE_KEY }}"
+          TURSO_DATABASE_URL = "${{ secrets.TURSO_DATABASE_URL }}"
+          TURSO_AUTH_TOKEN = "${{ secrets.TURSO_AUTH_TOKEN }}"
           TWITCH_CLIENT_ID = "${{ secrets.TWITCH_CLIENT_ID }}"
           EOF
 
