--- a/apps/server-rewards/package.json
+++ b/apps/server-rewards/package.json
@@ -9,8 +9,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.48.1",
-    "hono": "^4.6.20"
+    "@libsql/client": "^0.14.0",
+    "hono": "^4.6.20",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
