feat(bot-rewards): create bot rewards project

--- a/apps/server-rewards/package.json
+++ b/apps/server-rewards/package.json
@@ -1,5 +1,20 @@
 {
   "name": "server-rewards",
+  "private": true,
+  "version": "0.0.0",
+  "keywords": [
+    "twitch",
+    "stream",
+    "api",
+    "workers",
+    "embeejayz",
+    "rewards"
+  ],
+  "author": {
+    "name": "GountzJs",
+    "email": "tomasjdev@gmail.com"
+  },
+  "description": "Reward system for Embeejayz's Twitch community.",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
