--- a/apps/web-rewards/package.json
+++ b/apps/web-rewards/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
+    "vite-plugin-pwa": "^0.21.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
