--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Central repository for managing Embeejayz's stream-related projects and tools.",
   "scripts": {
     "bot": "nx start bot-rewards",
+    "bot:dev": "nx dev bot-rewards",
     "sv-recommend:dev": "nx dev server-rewards",
     "sv-recommend:deploy": "nx deploy server-rewards",
     "wb-recommend:dev": "nx dev web-rewards",
