--- a/apps/web-rewards/package.json
+++ b/apps/web-rewards/package.json
@@ -19,6 +19,7 @@
     "@embeeorg/ui-kit": "workspace:*",
     "@tanstack/react-query": "^5.66.3",
     "formik": "^2.4.6",
+    "msw": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
@@ -39,5 +40,10 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
