feat(embee-arena): :sparkles: add embee arena

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sv-recommend:deploy": "nx deploy server-rewards",
     "wb-recommend:dev": "nx dev web-rewards",
     "wb-recommend:build": "nx build web-rewards",
+    "wb-games:dev": "nx dev web-games",
     "ui-kit:build": "nx build @embeeorg/ui-kit",
     "commit": "commit",
     "format": "prettier . --write"
