feat(workspace): :hammer: add web-games build

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "wb-recommend:dev": "nx dev web-rewards",
     "wb-recommend:build": "nx build web-rewards",
     "wb-games:dev": "nx dev web-games",
+    "wb-games:build": "nx build web-games",
     "ui-kit:build": "nx build @embeeorg/ui-kit",
     "commit": "commit",
     "format": "prettier . --write"
