--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,5 +5,6 @@
     "dbaeumer.vscode-eslint",
     "vivaxy.vscode-conventional-commits",
     "mikerhyssmith.ts-barrelr",
+    "nrwl.angular-console"
   ]
 }
