feat(workspace): :fire: remove server rewards

--- a/apps/bot-rewards/package.json
+++ b/apps/bot-rewards/package.json
@@ -27,7 +27,9 @@
     "@libsql/client": "^0.14.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2",
     "tmi.js": "^1.8.5",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "ws": "^8.18.1"
   }
 }
